# BikeRaceEscape-axmol

./: .axproj  .gitignore  CMakeLists.txt  PATCH_06_NOTES.md  PATCH_09_IOS_AND_LEGACY_CONTAINERS.md  PATCH_STATUS.md  README_MIGRATION.md  README_PATCH_02.md
.claude/: settings.json
Content/: CompleteGameInfo.plist  ads.plist
Content/Fonts/: README.md
Content/Images/HD/: .dummy  MainFont.fnt  animation_s1.plist  animation_s2.plist  animation_s3.plist
Content/Images/SD/: .dummy  MainFont.fnt  animation_s0.plist  animation_s1.plist  animation_s2.plist  animation_s3.plist
Content/Sounds/: .dummy
Source/: AppDelegate.cpp  AppDelegate.h  Contants_data.h  EventHandler.cpp  EventHandler.h  GLESDEbugDrawLayer.cpp  GLESDEbugDrawLayer.h  GLESDebugDraw.cpp  GLESDebugDraw.h  MyObject-C-Interface.h  Neocortex.h  PZCrashReporter.cpp  PZCrashReporter.h  PZCrashReporterApple.mm  PZGBackgroundScene.cpp  PZGBackgroundScene.h  PZGBaseMenuScene.cpp  PZGBaseMenuScene.h  PZGCharacter.cpp  PZGCharacter.h  PZGCharacterMenu.cpp  PZGCharacterMenu.h  PZGCoin.cpp  PZGCoin.h  PZGCoinShopScene.cpp  PZGCoinShopScene.h  PZGContactListener.cpp  PZGContactListener.h  PZGGameFieldScene.cpp  PZGGameFieldScene.h  PZGGameOverScene.cpp  PZGGameOverScene.h  PZGGamefieldBasicAvoidance.cpp  PZGGamefieldBasicAvoidance.h  PZGGamefieldBasicRunner.cpp  PZGGamefieldBasicRunner.h  PZGGamefieldHelicopterGame.cpp  PZGGamefieldHelicopterGame.h  PZGGamefieldJumpingGame.cpp  PZGGamefieldJumpingGame.h  (+47 more)
Source/Ads/: AdsConfig.cpp  AdsConfig.h  AdsController.cpp  AdsController.h  AdsTypes.h  IAdsProvider.h
Source/Ads/Providers/: AdsProviderAdMob.cpp  AdsProviderAdMob.h  AdsProviderAdMobApple.mm  AdsProviderChartboost.cpp  AdsProviderChartboost.h  AdsProviderChartboostApple.mm  AdsProviderMux.cpp  AdsProviderMux.h  AdsProviderStub.h
Source/Parallax/: CCParallaxScrollNode.cpp  CCParallaxScrollNode.h  CCParallaxScrollOffset.cpp  CCParallaxScrollOffset.h
Source/SharedData/: PZGArtBackground.cpp  PZGArtBackground.h  PZGArtBackgroundPlay.cpp  PZGArtBackgroundPlay.h  PZGArtCharacter.cpp  PZGArtCharacter.h  PZGArtCoins.cpp  PZGArtCoins.h  PZGArtInterface.cpp  PZGArtInterface.h  PZGArtObject.cpp  PZGArtObject.h  PZGArtObstacle.cpp  PZGArtObstacle.h  PZGFontObject.cpp  PZGFontObject.h  PZGGameInfoAds.cpp  PZGGameInfoAds.h  PZGGameInfoGeneral.cpp  PZGGameInfoGeneral.h  PZGGameInfoIAP.cpp  PZGGameInfoIAP.h  PZGGameInfoLevel.cpp  PZGGameInfoLevel.h  PZGGameInfoLevelItem.cpp  PZGGameInfoLevelItem.h  PZGGameInfoObject.cpp  PZGGameInfoObject.h  PZGGameplayBasicAvoidance.cpp  PZGGameplayBasicAvoidance.h  PZGGameplayBasicRunner.cpp  PZGGameplayBasicRunner.h  PZGGameplayHelicopterGame.cpp  PZGGameplayHelicopterGame.h  PZGGameplayJumpingGame.cpp  PZGGameplayJumpingGame.h  PZGGameplayMegaJumpGame.cpp  PZGGameplayMegaJumpGame.h  PZGGameplayRacingGame.cpp  PZGGameplayRacingGame.h  (+16 more)
Source/StoreBridge/: JniHelpers.cpp  PZStoreAssetsHelperJni.cpp  PZStoreAssetsHelperJni.h  cocos2dx_EventHandlers.cpp  cocos2dx_EventHandlers.h  cocos2dx_StoreController.cpp  cocos2dx_StoreInfo.cpp  cocos2dx_StoreInventory.cpp  com_soomla_cocos2dx_store_EventHandlerBridge.cpp
build-ios-device/: CPackConfig.cmake  CPackSourceConfig.cmake  Podfile
build-ios-device/BikeRaceEscapeAxmol.xcodeproj/: project.pbxproj
build-ios-device/CMakeScripts/: ReRunCMake.make
build-ios-device/runtime/axslc/: cameraClear_fs  cameraClear_vs  colorNormalTexture_fs_1  colorTexture_fs  dualSampler_gray_fs  grayScale_fs  label_distanceGlow_fs  label_normal_fs  label_outline_fs  layer_radialGradient_fs  lineColor_fs  lineColor_vs  particleColor_fs  particleTexture_fs  particle_vs  positionColorLengthTexture_vs  positionColor_fs  positionColor_vs  positionTexture3D_vs  positionTexture_fs  positionUColor_vs  quadColor_fs  quadColor_vs  quadTexture_fs  quadTexture_vs  skinPositionNormalTexture_vs  skinPositionNormalTexture_vs_1  skinPositionTexture_vs  skybox_vs  terrain_fs  terrain_vs  videoTextureI420_fs  videoTextureNV12_fs
build-ios-game/: CPackConfig.cmake  CPackSourceConfig.cmake  Podfile
build-ios-game/BikeRaceEscapeAxmol.xcodeproj/: project.pbxproj
build-ios-game/CMakeScripts/: ReRunCMake.make
build-ios-game/runtime/axslc/: colorNormal_fs  label_distanceNormal_fs  positionColorLengthTexture_fs  videoTextureBGRA_fs
build-ios-sim/: CPackConfig.cmake  CPackSourceConfig.cmake  Podfile
build-ios-sim/BikeRaceEscapeAxmol.xcodeproj/: project.pbxproj
build-ios-sim/BikeRaceEscapeAxmol.xcworkspace/: contents.xcworkspacedata
build-ios-sim/CMakeScripts/: ReRunCMake.make
build-ios-sim/runtime/axslc/: color_fs  hsv_fs  positionColorTextureAsPointsize_vs  positionTextureColor_fs  positionTextureColor_vs  positionTextureInstance_vs  videoTextureYUY2_fs
build-ios-sim2/: CPackConfig.cmake  CPackSourceConfig.cmake
build-ios-sim2/CMakeScripts/: ReRunCMake.make
build-make/: CPackConfig.cmake  CPackSourceConfig.cmake
build_ios_arm64_sim/: 1k_cache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
build_ios_arm64_sim/CMakeScripts/: ReRunCMake.make
cmake/modules/: AXGamePlatformSetup.cmake  AXGameSourceSetup.cmake
legacy_native_ios_reference/: AdsManager.h  AdsManager.mm  AppController.h  AppController.mm  BikeRace-Info.plist  MyCPPClass.cpp  MyCPPClass.h  MyObject-C-Interface.h  MyObject.h  MyObject.mm  PHHelper.cpp  PHHelper.h  PHHelper.mm  PHHelper_C.h  PZGameCenter.h  PZGameCenter.mm  PZStoreAssets.h  PZStoreAssets.mm  PZStoreObserver.h  PZStoreObserver.mm  RootViewController.mm  cocos2dx_StoreController.mm
legacy_native_ios_reference/BikeRace.xcodeproj/: project.pbxproj
platform/: README_ICONS.md
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml
proj.ios_mac/ios/: GameViewController.mm  main.mm
proj.winrt/: App.xaml  Package.appxmanifest
tools/: IOS_ADMOB_RUNBOOK.md  README_ios_builds.md  add_pods_dependency.py  ensure_skadnetwork_ids.py  fix_xcode_pbxproj_remove_latomic.py  generate_app_icons.py  inject_pods_build_phase.py  ios_device.sh  ios_sim.sh  setup_pods_dependency.sh  skadnetwork_chartboost_required.txt
(+34 files in other folders)
